<resources>
  <string name="app_name">GoSellAPI</string>
  <string name="pay">Pay</string>
  <string name="tokenize">Pay</string>

  <string name="actionbar_title_address_on_card">Address on card</string>


  <string name="otp_cancel_payment_title">Cancel Payment</string>
  <string name="otp_cancel_payment_message">Would you like to cancel payment</string>
  <string name="otp_confirm_dialog">Confirm</string>
  <string name="otp_cancel_dialog">No</string>
  <string name="cancel">Cancel</string>
  <string name="dismiss">Dismiss</string>

  <string name="edittext_hint_card_number">Card number</string>
  <string name="edittext_hint_expiration_date">MM/YY</string>
  <string name="edittext_hint_CVV">CVV</string>
  <string name="edittext_hint_name_on_card">Name on card</string>
  <string name="edittext_hint_line1">Line 1</string>
  <string name="edittext_hint_line2">Line 2</string>
  <string name="edittext_hint_city">City</string>
  <string name="edittext_hint_state">State</string>
  <string name="edittext_hint_zip_code">Zip code</string>
  <string name="edittext_hint_name">Name</string>
  <string name="edittext_hint_phone_number">Phone number</string>
  <string name="edittext_hint_email">Email</string>
  <string name="edittext_hint_address_on_card">Address on Card</string>
<string name="business_icon_description">Business icon</string>
  <string name="textview_title_address_on_card">Address on Card</string>
  <string name="textview_title_country">Country</string>
  <string name="textview_title_recent">Recent</string>
  <string name="textview_title_recent_edit">EDIT</string>
  <string name="textview_title_recent_cancel">CANCEL</string>
  <string name="textview_title_others">Others</string>
  <string name="textview_title_resend_again">Resend OTP</string>
  <string name="textview_title_save_for_merchant">Save for %s Checkouts</string>
  <string name="textview_title_save_for_gopay">Save for goPay Checkouts</string>
  <string name="textview_title_personal_info">Your Personal Info</string>

  <string name="textview_disclaimer_save_card">For faster and more secure checkout, save your card</string>
  <string name="textview_disclaimer_save_card_info">Saved cards will only be used with your approval, you can remove them at any time.</string>

  <string name="textview_disclaimer_otp_sent_number">Please enter the OTP that has been sent to </string>
  <string name="textview_disclaimer_go_pay_checkouts">By enabling goPay, your card details will be saved with Tap Payments in order for you to get faster and more secure checkouts in multiple apps and websites</string>

  <string name="textview_placeholder_last_four_digits">••••%s</string>

  <string name="btn_title_confirm">Confirm</string>
  <string name="btn_title_save">Save</string>
  <string name="search">Search</string>
  <string name="payment_status_alert_successful">Successful</string>
  <string name="payment_status_alert_failed">Failed</string>
  <string name="payment_status_alert_invalid">Invalid</string>
  <string name="payment_status_alert_declined">Declined</string>
  <string name="payment_status_alert_timedout">TIMEDOUT</string>
  <string name="payment_status_alert_unknown">UNKNOWN</string>

  <string name="bt_month">Month</string>
  <string name="bt_year">Year</string>
  <string name="bt_expiration_required">Expiration date is required</string>
  <string name="bt_expiration_invalid">Expiration date is invalid</string>
  <string name="bt_form_hint_expiration">Expiration Date</string>

  <string name="bt_cvv_required">%s is required</string>
  <string name="bt_cvv_invalid">%s is invalid</string>
  <string name="bt_form_hint_cvv">@string/bt_cvv</string>
  <string name="bt_cvv">CVV</string>
  <string name="bt_cvc">CVC</string>
  <string name="bt_cid">CID</string>
  <string name="bt_cvn">CVN</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="select_currency_title">Select Currency</string>



  <string name="key_sdkLanguage">key_sdkLanguage</string>
  <string name="key_sdk_transaction_mode">key_sdk_transaction_mode</string>
  <string name="key_sdk_transaction_currency">key_sdk_transaction_currency</string>
  <string name="key_sdk_appearance_mode">key_sdk_appearance_mode</string>
  <string name="save_card">Save Card</string>
  <string name="card_saved_before">Your card has been saved before, you can not save it twice!</string>
    <string name="textview_disclaimer_save_card_header_title">Enter Card Details</string>



  <string name="delete_saved_card_title">Delete Card</string>
  <string name="delete_saved_card_button_Delete">Delete</string>
  <string name="delete_saved_card_button_Cancel">Cancel</string>
  <string name="delete_saved_card_msg">Are you sure you would like to delete card </string>



  <string name="extra_fees_alert_confirm_message_title">Confirm extra charges</string>
  <string name="extra_fees_alert_message">You will be charged an additional fee of %s for this type of payment, totaling an amount of %s </string>
  <string name="extra_fees_alert_confirm_message_confirm">Confirm</string>
  <string name="extra_fees_alert_confirm_message_cancel">Cancel</string>

  <string name="internet_connectivity_title">Network Error</string>
  <string name="internet_connectivity_message">Internet connection not available</string>
  <string name="retry">Retry</string>


  <string name="sdk_not_configure_correctly">SDK Not Configured Correctly</string>
  <string name="device_has_aproblem_in_connectivity_manager">Device has a problem in Connectivity manager</string>
  <string name="internet_connection_is_not_available">Internet connection is not available</string>
  <string name="sdk_error">Error</string>
  <string name="close">Close</string>
  <string name="error_deleting_card_title">Sorry</string>
  <string name="error_deleting_card_msg">The card can not be deleted right now. Please try it later.</string>
  <string name="ok" translatable="false">OK</string>
  <string name="alert_un_supported_card_title" translatable="false">Attention</string>
  <string name="alert_un_supported_card_message" translatable="false">This card is not supported</string>
  <string name="payment_in_progress" translatable="false">Payment in Progress</string>
  <string name="with_your_fawry_pay_reference" translatable="false">with your Fawry Pay Reference.</string>
  <string name="order_code" translatable="false">Order Code</string>
  <string name="email_sent"  translatable="false">An email has been sent to</string>
  <string name="sms_sent"  translatable="false">An sms has been sent to</string>
  <string name="email_sms__sent" translatable="false">An SMS and email has been sent " </string>
  <string name="fawry_cash_location" translatable="false">Please visit a Fawry Cash Location \n using the link below to complete your payment</string>
  <string name="code_expires_on" translatable="false">Code Expires on</string>


</resources>
